# authinfo

./: .gitignore  Makefile.am  README.org  authinfo.pc.in  bootstrap  configure.ac
config.site/: coverage
docs/: Doxyfile.in  Makefile.am  offlineimap.py
include/: authinfo.h  netrc.h  netrc_internal.h
python/: __init__.py.in  authinfo.py
src/: authinfo.c  authinfo_data.h  authinfo_internal.h  base64.c  base64.h  cli.c  main.c  netrc.c  pinentry.c  pinentry.h  utils.c  utils.h
tests/: authinfo_gpg_tests.c  authinfo_parsing_tests.c  private_key.inc  public_key.inc
tests/files/gpg_tests/: gpged_password  gpged_password_bad  private.key  public.key  read_file  read_file.gpg
